# serializer version: 1
# name: test_entities[binary_sensor][binary_sensor.api_check_maintenance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.api_check_maintenance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maintenance',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Maintenance',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'maintenance',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10700_maintenance',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.api_check_maintenance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'API check Maintenance',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.api_check_maintenance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.api_check_problem-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.api_check_problem',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problem',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10700_problem',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.api_check_problem-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'average': 0,
      'count': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      'disaster': 0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'API check Problem',
      'high': 0,
      'information': 0,
      'not_classified': 0,
      'problems': list([
      ]),
      'warning': 0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.api_check_problem',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.database_01_maintenance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.database_01_maintenance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maintenance',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Maintenance',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'maintenance',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10501_maintenance',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.database_01_maintenance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Database 01 Maintenance',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.database_01_maintenance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.database_01_problem-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.database_01_problem',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problem',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10501_problem',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.database_01_problem-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'average': 1,
      'count': 1,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      'disaster': 0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Database 01 Problem',
      'high': 0,
      'information': 0,
      'not_classified': 0,
      'problems': list([
        dict({
          'acknowledged': True,
          'event_id': '901',
          'hosts': list([
            'Database 01',
          ]),
          'name': 'Zabbix agent is not available',
          'severity': 'average',
          'since': '2026-07-14T03:35:00+00:00',
        }),
      ]),
      'warning': 0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.database_01_problem',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.switch_01_maintenance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.switch_01_maintenance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maintenance',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Maintenance',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'maintenance',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10600_maintenance',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.switch_01_maintenance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Switch 01 Maintenance',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.switch_01_maintenance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.switch_01_problem-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.switch_01_problem',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problem',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10600_problem',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.switch_01_problem-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'average': 0,
      'count': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      'disaster': 0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Switch 01 Problem',
      'high': 0,
      'information': 0,
      'not_classified': 0,
      'problems': list([
      ]),
      'warning': 0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.switch_01_problem',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.web_server_01_maintenance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.web_server_01_maintenance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maintenance',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Maintenance',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'maintenance',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10500_maintenance',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.web_server_01_maintenance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Maintenance',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.web_server_01_maintenance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.web_server_01_problem-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.web_server_01_problem',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problem',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10500_problem',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.web_server_01_problem-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'average': 0,
      'count': 1,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      'disaster': 0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Problem',
      'high': 1,
      'information': 0,
      'not_classified': 0,
      'problems': list([
        dict({
          'acknowledged': False,
          'event_id': '900',
          'hosts': list([
            'Web server 01',
          ]),
          'name': 'High CPU utilization',
          'severity': 'high',
          'since': '2026-07-14T03:35:00+00:00',
        }),
      ]),
      'warning': 0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.web_server_01_problem',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[event][event.api_check_problem_events-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.api_check_problem_events',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem events',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Problem events',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problem_events',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10700_problem_events',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event][event.api_check_problem_events-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'API check Problem events',
    }),
    'context': <ANY>,
    'entity_id': 'event.api_check_problem_events',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[event][event.database_01_problem_events-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.database_01_problem_events',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem events',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Problem events',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problem_events',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10501_problem_events',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event][event.database_01_problem_events-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Database 01 Problem events',
    }),
    'context': <ANY>,
    'entity_id': 'event.database_01_problem_events',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[event][event.switch_01_problem_events-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.switch_01_problem_events',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem events',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Problem events',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problem_events',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10600_problem_events',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event][event.switch_01_problem_events-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Switch 01 Problem events',
    }),
    'context': <ANY>,
    'entity_id': 'event.switch_01_problem_events',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[event][event.web_server_01_problem_events-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.web_server_01_problem_events',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem events',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Problem events',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problem_events',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10500_problem_events',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event][event.web_server_01_problem_events-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Problem events',
    }),
    'context': <ANY>,
    'entity_id': 'event.web_server_01_problem_events',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[event][event.zabbix_problem_events-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.zabbix_problem_events',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problem events',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Problem events',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problem_events',
    'unique_id': '01K5ZABBIXTESTENTRY000000_server_problem_events',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event][event.zabbix_problem_events-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'problem',
        'resolved',
        'acknowledged',
        'unacknowledged',
        'severity_changed',
        'suppressed',
        'unsuppressed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Problem events',
    }),
    'context': <ANY>,
    'entity_id': 'event.zabbix_problem_events',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[sensor][sensor.api_check_highest_problem_severity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'not_classified',
        'information',
        'warning',
        'average',
        'high',
        'disaster',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.api_check_highest_problem_severity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Highest problem severity',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Highest problem severity',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'highest_severity',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10700_highest_severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.api_check_highest_problem_severity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'API check Highest problem severity',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'not_classified',
        'information',
        'warning',
        'average',
        'high',
        'disaster',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.api_check_highest_problem_severity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'none',
  })
# ---
# name: test_entities[sensor][sensor.database_01_agent_availability-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unknown',
        'available',
        'not_available',
        'mixed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.database_01_agent_availability',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Agent availability',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Agent availability',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'availability_agent',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10501_availability_agent',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.database_01_agent_availability-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Database 01 Agent availability',
      'interfaces': list([
        dict({
          'error': 'Get value from agent failed: cannot connect',
          'interface': '192.0.2.11:10050',
          'status': 'not_available',
        }),
      ]),
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unknown',
        'available',
        'not_available',
        'mixed',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.database_01_agent_availability',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_available',
  })
# ---
# name: test_entities[sensor][sensor.database_01_highest_problem_severity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'not_classified',
        'information',
        'warning',
        'average',
        'high',
        'disaster',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.database_01_highest_problem_severity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Highest problem severity',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Highest problem severity',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'highest_severity',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10501_highest_severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.database_01_highest_problem_severity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Database 01 Highest problem severity',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'not_classified',
        'information',
        'warning',
        'average',
        'high',
        'disaster',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.database_01_highest_problem_severity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'average',
  })
# ---
# name: test_entities[sensor][sensor.database_01_linux_cpu_utilization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.database_01_linux_cpu_utilization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Linux: CPU utilization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Linux: CPU utilization',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10501_system.cpu.util',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.database_01_linux_cpu_utilization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Database 01 Linux: CPU utilization',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.database_01_linux_cpu_utilization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[sensor][sensor.database_01_snmp_availability-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unknown',
        'available',
        'not_available',
        'mixed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.database_01_snmp_availability',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'SNMP availability',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'SNMP availability',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'availability_snmp',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10501_availability_snmp',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.database_01_snmp_availability-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Database 01 SNMP availability',
      'interfaces': list([
        dict({
          'error': '',
          'interface': '192.0.2.12:161',
          'status': 'available',
        }),
      ]),
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unknown',
        'available',
        'not_available',
        'mixed',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.database_01_snmp_availability',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'available',
  })
# ---
# name: test_entities[sensor][sensor.switch_01_highest_problem_severity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'not_classified',
        'information',
        'warning',
        'average',
        'high',
        'disaster',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.switch_01_highest_problem_severity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Highest problem severity',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Highest problem severity',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'highest_severity',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10600_highest_severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.switch_01_highest_problem_severity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Switch 01 Highest problem severity',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'not_classified',
        'information',
        'warning',
        'average',
        'high',
        'disaster',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.switch_01_highest_problem_severity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'none',
  })
# ---
# name: test_entities[sensor][sensor.switch_01_snmp_availability-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unknown',
        'available',
        'not_available',
        'mixed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.switch_01_snmp_availability',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'SNMP availability',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'SNMP availability',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'availability_snmp',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10600_availability_snmp',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.switch_01_snmp_availability-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Switch 01 SNMP availability',
      'interfaces': list([
        dict({
          'error': '',
          'interface': '192.0.2.20:161',
          'status': 'unknown',
        }),
      ]),
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unknown',
        'available',
        'not_available',
        'mixed',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.switch_01_snmp_availability',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_agent_availability-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unknown',
        'available',
        'not_available',
        'mixed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_agent_availability',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Agent availability',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Agent availability',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'availability_agent',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10500_availability_agent',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_agent_availability-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Agent availability',
      'interfaces': list([
        dict({
          'error': '',
          'interface': '192.0.2.10:10050',
          'status': 'available',
        }),
        dict({
          'error': '',
          'interface': 'Active checks',
          'status': 'available',
        }),
      ]),
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unknown',
        'available',
        'not_available',
        'mixed',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_agent_availability',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'available',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_cpu_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_cpu_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CPU temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'CPU temperature',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_sensor.temp.value[cpu]',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_cpu_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 CPU temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_cpu_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '45.0',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_custom_metric-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_custom_metric',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Custom metric',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Custom metric',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_custom.metric',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_custom_metric-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Custom metric',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_custom_metric',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.0',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_download_speed_for_scenario_homepage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_download_speed_for_scenario_homepage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Download speed for scenario "Homepage".',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Download speed for scenario "Homepage".',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_web.test.in[Homepage,,bps]',
    'unit_of_measurement': <UnitOfDataRate.BYTES_PER_SECOND: 'B/s'>,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_download_speed_for_scenario_homepage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'data_rate',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Download speed for scenario "Homepage".',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfDataRate.BYTES_PER_SECOND: 'B/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_download_speed_for_scenario_homepage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1200.5',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_fs_space_used_in-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_fs_space_used_in',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'FS [/]: Space: Used, in %',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'FS [/]: Space: Used, in %',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_vfs.fs.dependent.size[/,pused]',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_fs_space_used_in-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 FS [/]: Space: Used, in %',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_fs_space_used_in',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_highest_problem_severity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'not_classified',
        'information',
        'warning',
        'average',
        'high',
        'disaster',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_highest_problem_severity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Highest problem severity',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Highest problem severity',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'highest_severity',
    'unique_id': '01K5ZABBIXTESTENTRY000000_host_10500_highest_severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_highest_problem_severity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Highest problem severity',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'not_classified',
        'information',
        'warning',
        'average',
        'high',
        'disaster',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_highest_problem_severity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'high',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_icmp_icmp_ping-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'Down',
        'Up',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_icmp_icmp_ping',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'ICMP: ICMP ping',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'ICMP: ICMP ping',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_icmpping',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_icmp_icmp_ping-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 ICMP: ICMP ping',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'Down',
        'Up',
      ]),
      'raw_value': '3',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_icmp_icmp_ping',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_linux_cpu_utilization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_linux_cpu_utilization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Linux: CPU utilization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Linux: CPU utilization',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_system.cpu.util',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_linux_cpu_utilization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Linux: CPU utilization',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_linux_cpu_utilization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.2',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_linux_system_local_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_linux_system_local_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Linux: System local time',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Linux: System local time',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_system.localtime',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_linux_system_local_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Linux: System local time',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_linux_system_local_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-07-14T03:33:20+00:00',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_linux_system_uptime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_linux_system_uptime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Linux: System uptime',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Linux: System uptime',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_system.uptime',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_linux_system_uptime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Linux: System uptime',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_linux_system_uptime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-07-13T03:33:20+00:00',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_linux_zabbix_agent_ping-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'Up',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_linux_zabbix_agent_ping',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Linux: Zabbix agent ping',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Linux: Zabbix agent ping',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_agent.ping',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_linux_zabbix_agent_ping-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Linux: Zabbix agent ping',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'Up',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_linux_zabbix_agent_ping',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Up',
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_message_of_the_day-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.web_server_01_message_of_the_day',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Message of the day',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Message of the day',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10500_vfs.file.contents[/etc/motd]',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.web_server_01_message_of_the_day-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Web server 01 Message of the day',
      'raw_value': 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.web_server_01_message_of_the_day',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_hosts-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_hosts',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hosts',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hosts',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hosts',
    'unique_id': '01K5ZABBIXTESTENTRY000000_server_hosts',
    'unit_of_measurement': 'hosts',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_hosts-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Hosts',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'hosts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_hosts',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_items-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_items',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Items',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Items',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'items',
    'unique_id': '01K5ZABBIXTESTENTRY000000_server_items',
    'unit_of_measurement': 'items',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_items-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Items',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'items',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_items',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '27',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_not_supported_items-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_not_supported_items',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Not supported items',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Not supported items',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'unsupported_items',
    'unique_id': '01K5ZABBIXTESTENTRY000000_server_unsupported_items',
    'unit_of_measurement': 'items',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_not_supported_items-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Not supported items',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'items',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_not_supported_items',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_problems-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_problems',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Problems',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Problems',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'problems',
    'unique_id': '01K5ZABBIXTESTENTRY000000_server_problems',
    'unit_of_measurement': 'problems',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_problems-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'average': 1,
      'disaster': 0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Problems',
      'high': 1,
      'information': 1,
      'not_classified': 0,
      'problems': list([
        dict({
          'acknowledged': False,
          'event_id': '900',
          'hosts': list([
            'Web server 01',
          ]),
          'name': 'High CPU utilization',
          'severity': 'high',
          'since': '2026-07-14T03:35:00+00:00',
        }),
        dict({
          'acknowledged': True,
          'event_id': '901',
          'hosts': list([
            'Database 01',
          ]),
          'name': 'Zabbix agent is not available',
          'severity': 'average',
          'since': '2026-07-14T03:35:00+00:00',
        }),
        dict({
          'acknowledged': False,
          'event_id': '904',
          'hosts': list([
          ]),
          'name': 'Other host problem',
          'severity': 'information',
          'since': '2026-07-14T03:35:00+00:00',
        }),
      ]),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      'suppressed': 1,
      'symptoms': 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'problems',
      'warning': 0,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_problems',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_triggers-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_triggers',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Triggers',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Triggers',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'triggers',
    'unique_id': '01K5ZABBIXTESTENTRY000000_server_triggers',
    'unit_of_measurement': 'triggers',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_triggers-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Triggers',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'triggers',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_triggers',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.zabbix_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Version',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Version',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'version',
    'unique_id': '01K5ZABBIXTESTENTRY000000_server_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.zabbix_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.4.14',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_configuration_cache_used-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_zabbix_server_configuration_cache_used',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zabbix server: Configuration cache, % used',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zabbix server: Configuration cache, % used',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10084_zabbix[rcache,buffer,pused]',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_configuration_cache_used-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Zabbix server: Configuration cache, % used',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_zabbix_server_configuration_cache_used',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_number_of_processed_values_per_second-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_zabbix_server_number_of_processed_values_per_second',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zabbix server: Number of processed values per second',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zabbix server: Number of processed values per second',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10084_zabbix[wcache,values]',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_number_of_processed_values_per_second-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Zabbix server: Number of processed values per second',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_zabbix_server_number_of_processed_values_per_second',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.5',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_queue-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_zabbix_server_queue',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zabbix server: Queue',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zabbix server: Queue',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10084_zabbix[queue]',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_queue-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Zabbix server: Queue',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_zabbix_server_queue',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_stats_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_zabbix_server_stats_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zabbix server: Stats version',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zabbix server: Stats version',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10084_zabbix.stats.version',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_stats_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Zabbix server: Stats version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_zabbix_server_stats_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_utilization_of_poller_data_collector_processes_in-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_zabbix_server_utilization_of_poller_data_collector_processes_in',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zabbix server: Utilization of poller data collector processes, in %',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zabbix server: Utilization of poller data collector processes, in %',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10084_zabbix[process,poller,avg,busy]',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_utilization_of_poller_data_collector_processes_in-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Zabbix server: Utilization of poller data collector processes, in %',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_zabbix_server_utilization_of_poller_data_collector_processes_in',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_zabbix_stats-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zabbix_zabbix_server_zabbix_stats',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zabbix server: Zabbix stats',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zabbix server: Zabbix stats',
    'platform': 'zabbix',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01K5ZABBIXTESTENTRY000000_item_10084_zabbix[stats,127.0.0.1,10051]',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.zabbix_zabbix_server_zabbix_stats-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zabbix Zabbix server: Zabbix stats',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zabbix_zabbix_server_zabbix_stats',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
